-Changed Header.html directory

--- a/src/header.html
+++ b/src/header.html
@@ -11,14 +11,16 @@
               <div class="logo">
                   <img src="logo.png"  width="160" height="20">
               </div>
-           <div class="InputWithIcon">
+            <div class="InputWithIcon">
                <input type="text" placeholder="Search For a Meaning.." size="55">
                <i class="fa fa-search" aria-hidden="true"  onclick="submitSearch()"></i>
                <a class="fa fa-microphone fa-lg" onclick="speechRecognition()"></a>
             </div>
             <div class="show">
-              <a class="show" onclick="speechRecognition()"> <i class="fa fa-eye" aria-hidden="true"></i></a>
-              <label onclick="speechRecognition()"> ShowAll</label> 
+              <a class="show" onclick="speechRecognition()">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </a>
+              <label onclick="speechRecognition()">ShowAll</label> 
             </div>
            </div>
     </header>   
