--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <div class="editDiv" id="editmodal" style="display: none">
         <label id="wordlbl" class="wordlbl" type="text"></label>
         <div class="labelDiv">        
-            <select class="typeInput" id="editTypeInput">
+            <select class="inputForm" id="editTypeInput">
                 <option value=""  disabled selected="selected">Choose a type</option>
                 <option value="noun">Noun</option>
                 <option value="verb">Verb</option>
