changing icon images to text icons

--- a/src/index.html
+++ b/src/index.html
@@ -38,15 +38,16 @@
             <p id="definition" class="definitionClass"></p>
         </div>
         <button type="button" class="editbutton" onclick>
-            <img src = "assets/edit.png" alt="edit Word" class="editimg">
+            <i class="fa fa-edit" aria-hidden="true" class="editimg"></i>
         </button>
         <button class="deleteImageButton" onclick>
-            <img src = "assets/delete.png" alt="Delete Word" class="deleteimg">
+            <i class="fa fa-trash" aria-hidden="true" class="deleteimg"></i>
         </button>
     </div>
 
     <div onclick="openAddModal()" class="plusbutton">
-        <img src = "assets/add.png" alt="Add Word" class="addimg">
+      <!-- <i class="fa fa-plus" aria-hidden="true"></i> -->
+      <i> +</i>
     </div>
 
     <!-- .....................................ADD WORD MODAL HTML......................................... -->
