adding text to speech

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
         <button class="deleteImageButton" onclick>
             <i class="fa fa-trash" aria-hidden="true" class="deleteimg"></i>
         </button>
+          <button class="speechButton" onclick>
+            <i class="fa fa-volume-up" aria-hidden="true" class="Speechimg"></i>
+        </button>
     </div>
 
     <div onclick="openAddModal()" class="plusbutton">
