--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
             <button type="submit" class="cancelBtn" onclick="canceledit()">Cancel</button>
         </div>
     </div>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>    
     <script src="./js/index.js"></script>
+    
 </body>
