modifying  text to speech button

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
         <button class="deleteImageButton" onclick>
             <i class="fa fa-trash" aria-hidden="true" class="deleteimg"></i>
         </button>
-          <button class="speechButton" onclick>
-            <i class="fa fa-volume-up" aria-hidden="true" class="Speechimg"></i>
+          <button class="speechButton" onclick id="speech">
+            <i class="fa fa-volume-up" aria-hidden="true" class="Speechimg" id="speechIcon"></i>
         </button>
     </div>
 
