--- a/src/index.html
+++ b/src/index.html
@@ -100,10 +100,10 @@
         <div class="selectLanguageDiv">
             <select class="inputForm" id="translateInput"  onchange="translateWord()">
                     <option value=""  disabled selected="selected">Choose a language</option>
-                    <option value="Arabic">Arabic</option>
-                    <option value="French">French</option>
-                    <option value="German">German</option>
-                    <option value="Spanish">Spanish</option>
+                    <option value="ar">Arabic</option>
+                    <option value="fr">French</option>
+                    <option value="de">German</option>
+                    <option value="es">Spanish</option>
         </select>
         </div>
         <div class="wordDiv">
