--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,7 @@
         <div class="selectLanguageDiv">
             <select class="inputForm" id="translateInput"  onchange="translateWord()">
                     <option value=""  disabled selected="selected">Choose a language</option>
+                    <option value="en">English</option>
                     <option value="ar">Arabic</option>
                     <option value="fr">French</option>
                     <option value="de">German</option>
