fixing bug in translation

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
     <!-- .....................................TRANSLATE WORD MODAL HTML......................................... -->
     <div class="translateM" id="translateModal" style="display: none">
         <div class="selectLanguageDiv">
-            <select class="inputForm" id="translateInput"  onchange="translateWord()">
+            <select class="inputForm" id="translateInput"  >
                     <option value=""  disabled selected="selected">Choose a language</option>
                     <option value="en">English</option>
                     <option value="ar">Arabic</option>
