--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
         <div class="closediv">
             <button type="submit" id="closebtn" class="closeBtn" onclick="cancelTranslate()">Close</button>
         </div>
-        <div id="loadingTranslate">
+        <div id="loadingTranslation">
         </div>
     </div>
     <!-- .....................................LOADING INDICATOR HTML......................................... -->
